--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@widgetbot/react-embed": "^1.9.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "firebase": "^10.12.2",
     "lucide-react": "^0.378.0",
     "next": "14.2.3",
     "next-themes": "^0.3.0",
