--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@widgetbot/react-embed": "^1.9.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "embla-carousel-autoplay": "^8.1.6",
+    "embla-carousel-react": "^8.1.6",
     "firebase": "^10.12.2",
     "lucide-react": "^0.378.0",
     "next": "14.2.3",
